--- a/descrição_produto_codigo3.html
+++ b/descrição_produto_codigo3.html
@@ -57,17 +57,25 @@
 		<h1>Descrição do Produto</h1>
 	</div>
 	<div class="produto">
-		<img src="produto3" alt="Produto">
+		<img src="produto3.png" alt="Produto">
 		<h3>Monitor Gamer LG UltraGear Nano IPS 27</h3>
-		<p>Preço: R$ XX,XX</p>
+		<p>Preço: R$ 3.999,99</p>
 		<p>Descrição: Monitor Gamer LG UltraGear Nano IPS 27" QHD 165Hz HDR 400 Nvidia G-SYNC: com Tela Nano IPS WQHD (2560 x 1440) 1ms (GTG), G-SYNC, HDR 400, 165Hz e HDMI, DisplayPort, Preto.</p>
-		<button class="btn-carrinho" onclick="adicionarAoCarrinho()">Adicionar ao Carrinho</button>
+		<button class="btn-carrinho" onclick="adicionarAoCarrinho('produto3.png','Monitor Gamer LG UltraGear Nano IPS 27', 3999.99)">Adicionar ao Carrinho</button>
 	</div>
-
+	
 	<script>
-		function adicionarAoCarrinho() {
-			// Lógica para adicionar o produto ao carrinho
-			// Aqui você pode implementar a lógica desejada, como enviar uma requisição ao servidor ou armazenar localmente no navegador.
+		function adicionarAoCarrinho(imagem, nome, preco) {
+			var produto = {
+				imagem: imagem,
+				nome: nome,
+				preco: preco
+			};
+
+			var carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+			carrinho.push(produto);
+			localStorage.setItem('carrinho', JSON.stringify(carrinho));
+
 			alert("Produto adicionado ao carrinho!");
 			window.location.href = "pagina_carrinho.html"; // Redireciona para a página do carrinho de compras
 		}
