--- a/pagina-finalizar-compra.html
+++ b/pagina-finalizar-compra.html
@@ -67,7 +67,7 @@
 			width: 100%;
 			height: 100%;
 			background-color: rgba(0, 0, 0, 0.5);
-			display: flex;
+			display: none; /* Alterado para inicialmente oculto */
 			align-items: center;
 			justify-content: center;
 			z-index: 9999;
@@ -98,6 +98,11 @@
 		.modal button:hover {
 			background-color: #000;
 		}
+		.gif {
+			margin-top: 20px;
+			max-width: 100%;
+			height: auto;
+		}
 	</style>
 </head>
 <body>
@@ -105,50 +110,59 @@
 		<h1>Confirmação de Compra</h1>
 	</header>
 	<div class="container">
-		<form onsubmit="event.preventDefault(); abrirModal();">
+		<form id="compraForm">
 			<label for="nome">Nome:</label>
 			<input type="text" id="nome" required>
 
 			<label for="sobrenome">Sobrenome:</label>
 			<input type="text" id="sobrenome" required>
-            <label for="cpf">CPF:</label>
-		<input type="text" id="cpf" required>
 
-		<label for="email">E-mail:</label>
-		<input type="email" id="email" required>
+			<label for="cpf">CPF:</label>
+			<input type="text" id="cpf" required>
 
-		<label for="forma-pagamento">Forma de Pagamento:</label>
-		<select id="forma-pagamento" required>
-			<option value="">Selecione</option>
-			<option value="cartao">Cartão de Crédito</option>
-			<option value="boleto">Boleto Bancário</option>
-			<option value="paypal">PayPal</option>
-		</select>
+			<label for="email">E-mail:</label>
+			<input type="email" id="email" required>
 
-		<button type="submit">Confirmar Compra</button>
-	</form>
-</div>
+			<label for="forma-pagamento">Forma de Pagamento:</label>
+			<select id="forma-pagamento" required>
+				<option value="">Selecione</option>
+				<option value="cartao">Cartão de Crédito</option>
+				<option value="boleto">Boleto Bancário</option>
+				<option value="paypal">PayPal</option>
+			</select>
 
-<div class="modal" id="modal">
-	<div class="modal-content">
-		<p class="modal-message">Obrigado por comprar na Tech Wars!</p>
-		<p>Que a força da tecnologia esteja com você.</p>
-		<button onclick="fecharModal()">Fechar</button>
+			<button type="submit">Confirmar Compra</button>
+		</form>
 	</div>
-</div>
 
-<script>
-	// Função para abrir o modal
-	function abrirModal() {
-		const modal = document.getElementById("modal");
-		modal.style.display = "flex";
-	}
+	<div class="modal" id="modal">
+		<div class="modal-content">
+			<p class="modal-message">Obrigado por comprar na Tech Wars!</p>
+			<img class="gif" src="giphy.gif" alt="Mensagem de confirmação">
+			<p>Que a força da tecnologia esteja com você.</p>
+			<button onclick="fecharModal()">Fechar</button>
+		</div>
+	</div>
 
-	// Função para fechar o modal
-	function fecharModal() {
-		const modal = document.getElementById("modal");
-		modal.style.display = "none";
-	}
-</script>
+	<script>
+		// Função para abrir o modal
+		function abrirModal() {
+			const modal = document.getElementById("modal");
+			modal.style.display = "flex";
+		}
+
+		// Função para fechar o modal
+		function fecharModal() {
+			const modal = document.getElementById("modal");
+			modal.style.display = "none";
+			window.location.href = "index.html"; // Redireciona para a página "index.html"
+		}
+
+		// Evento de envio do formulário
+		document.getElementById("compraForm").addEventListener("submit", function(event) {
+			event.preventDefault(); // Impede o envio do formulário
+			abrirModal(); // Abre o modal de confirmação
+		});
+	</script>
 </body>
 </html>
