--- a/descrição_produto_codigo4.html
+++ b/descrição_produto_codigo4.html
@@ -8,35 +8,55 @@
 			text-align: center;
 			margin: 0;
 		}
+
 		.header {
 			background-color: #000;
 			color: #fff;
 			padding: 20px;
 		}
-		.header h1 {
-			margin: 0;
-			font-size: 24px;
-		}
+
+			.header h1 {
+				margin: 0;
+				font-size: 24px;
+			}
+
 		.produto {
 			margin-top: 50px;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 		}
-		.produto img {
-			width: 300px;
-			height: 300px;
-			margin-bottom: 20px;
-		}
-		.produto h3 {
-			margin: 10px 0;
-			font-size: 20px;
-			font-weight: bold;
-		}
-		.produto p {
-			margin: 5px 0;
-			font-size: 16px;
-		}
+
+			.produto img {
+				width: 300px;
+				height: 300px;
+				margin-bottom: 20px;
+				cursor: pointer;
+				transition: transform 0.5s;
+			}
+
+				.produto img:hover {
+					transform: scale(1.2);
+				}
+
+			.produto .imagem-pequena {
+				width: 100px;
+				height: 100px;
+				margin-bottom: 10px;
+				cursor: pointer;
+			}
+
+			.produto h3 {
+				margin: 10px 0;
+				font-size: 20px;
+				font-weight: bold;
+			}
+
+			.produto p {
+				margin: 5px 0;
+				font-size: 16px;
+			}
+
 		.btn-carrinho {
 			margin-top: 20px;
 			padding: 10px 20px;
@@ -47,9 +67,10 @@
 			border-radius: 5px;
 			cursor: pointer;
 		}
-		.btn-carrinho:hover {
-			background-color: #333;
-		}
+
+			.btn-carrinho:hover {
+				background-color: #333;
+			}
 	</style>
 </head>
 <body>
@@ -57,7 +78,12 @@
 		<h1>Descrição do Produto</h1>
 	</div>
 	<div class="produto">
-		<img src="produto4.png" alt="Produto">
+		<img class="imagem-destaque" src="produto4.png" alt="Produto" onclick="zoomImage(this)">
+		<div>
+			<img class="imagem-pequena" src="produto4.png" alt="Produto 4" onclick="changeImage(this)">
+			<img class="imagem-pequena" src="produto4-2.png" alt="Produto 5" onclick="changeImage(this)">
+			<img class="imagem-pequena" src="produto4-3.png" alt="Produto 6" onclick="changeImage(this)">
+		</div>
 		<h3>Headset Gamer Sem Fio Logitech G435</h3>
 		<p>Preço: R$ 629,99</p>
 		<p>Descrição: A combinação do LIGHTSPEED sem fio e do Bluetooth proporciona a você a liberdade de se conectar sem fio ao PC, mobile e outros dispositivos. Os drivers de 40 mm oferecem som incrível enquanto os microfones com formação de feixe eliminam o ruído de fundo e do braço do microfone. Também tem a certificação CarbonNeutral e foi desenvolvido com mínimo de 22% de plástico reciclado.</p>
@@ -65,6 +91,19 @@
 	</div>
 
 	<script>
+		function zoomImage(element) {
+			var imagemDestaque = document.querySelector('.imagem-destaque');
+			var imagemDestaqueSrc = imagemDestaque.getAttribute('src');
+
+			imagemDestaque.setAttribute('src', element.getAttribute('src'));
+			element.setAttribute('src', imagemDestaqueSrc);
+		}
+
+		function changeImage(element) {
+			var imagemDestaque = document.querySelector('.imagem-destaque');
+			imagemDestaque.src = element.src;
+		}
+
 		function adicionarAoCarrinho(imagem, nome, preco) {
 			var produto = {
 				imagem: imagem,
